# source_fast

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
app/: Cargo.toml
app/src/: cli.rs  daemon.rs  main.rs  mcp.rs  skill.md
app/tests/: e2e_basic.rs  e2e_edge_cases.rs  e2e_filesystem.rs  e2e_git.rs  e2e_leader_election.rs  e2e_mcp_readiness.rs  e2e_resilience.rs  e2e_search.rs  e2e_worktree.rs
app/tests/common/: mcp.rs  mod.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  model.rs  search.rs  storage.rs  text.rs
fs/: Cargo.toml
fs/src/: lib.rs  scanner.rs  watcher.rs
llm/: TODO.md
llm/test/: test_cases.md  testing_guide.md
progress/: Cargo.toml
progress/src/: lib.rs
scripts/: benchmark.ps1  benchmark_heartbeat.ps1
