[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.10", features = ["server", "transport-io", "macros"] }
schemars = "1.1"
source_fast_core = { path = "../core", package = "core" }
fs_layer = { path = "../fs", package = "fs" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
