[package]
name = "source_fast"
version = "0.1.0"
edition = "2024"
description = "Fast, persistent trigram-based code search with MCP server support"
license = "MIT"
repository = "https://github.com/user/source_fast"
keywords = ["search", "trigram", "code", "mcp", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.10", features = ["server", "transport-io", "macros"] }
schemars = "1.1"
source_fast_core = { path = "../core" }
source_fast_fs = { path = "../fs" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
insta = { version = "1.40", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
