[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
roaring = { version = "0.10", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
