[package]
name = "source_fast_core"
version = "0.1.0"
edition = "2024"
description = "Core indexing and search engine for source_fast"
license = "MIT"
repository = "https://github.com/user/source_fast"
keywords = ["search", "trigram", "code", "index"]
categories = ["development-tools", "text-processing"]

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
roaring = { version = "0.11", features = ["serde"] }
bincode = { version = "2.0", default-features = false, features = ["serde", "alloc", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
regex = "1.11"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
